# kin

./: .env.example  .gitignore  CLAUDE.md  README.md  kin.example.toml  pyproject.toml
.cursor/rules/: no-ai-attribution.mdc
api/: .env.example  conftest.py  deps.py  main.py  models.py  pyproject.toml
api/routers/: classifications.py  digest.py  runs.py
api/tests/: test_endpoints.py  test_health.py  test_models_contract.py  test_readonly_scope.py
app/: audit.py  classify_email.py  cli_common.py  config.py  db.py  digest.py  email_filters.py  email_render.py  email_source.py  eval.py  exit_codes.py  ics.py  imap_source.py  links.py  obsidian.py  send.py  sync.py  triage.py  turso.py
app/prompts/: classify.txt
app/schemas/: email.py
data/samples/: sample_email.txt
db/: schema.sql
docs/: multi-user-customization.md
ingest/: gmail_source.py  oauth.py  pyproject.toml  run.py  token_store.py
ingest/tests/: conftest.py  test_gmail_source.py  test_oauth.py  test_run.py  test_token_store.py
scripts/: gen-classify-prompt.mjs  preflight.sh  seed_config_to_db.py  seed_demo.py  test.sh  turso_smoke.py
tests/: conftest.py  test_classify_smoke.py  test_config.py  test_db.py  test_db_queries.py  test_digest_build.py  test_digest_cli.py  test_digest_render.py  test_docs.py  test_effective_config.py  test_email_filters.py  test_email_render.py  test_fetch_runs.py  test_ics.py  test_imap_source.py  test_obsidian.py  test_send.py  test_sync_cli.py  test_triage_db.py  test_turso.py
tests/fixtures/: schema_v1.sql
tests/golden/: digest_basic.md
web/: .env.example  DEPLOY.md  README.md  auth.config.ts  auth.ts  middleware.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vercel.json  vitest.config.ts
web/__tests__/: DashboardTabs.test.tsx  SignOutButton.test.tsx  SyncGmailButton.test.tsx  TuningPrompt.test.tsx  auth-callbacks.test.ts  auth-redirect.test.ts  cron-route.test.ts  finance-ingest-route.test.ts  finance-plaid-routes.test.ts  finance-queue-decision-route.test.ts  finance-receipt-scan-route.test.ts  mute-route.test.ts  smoke.test.tsx  sync-route.test.ts
web/app/: layout.tsx  page.tsx
web/components/: DashboardTabs.tsx  MuteButton.tsx  MutedSenders.tsx  SignOutButton.tsx  SyncGmailButton.tsx  TuningPrompt.tsx
web/docs/: e2e-verification.md
web/e2e/: golden-paths.spec.ts
web/lib/: api.ts  classify.ts  classifyPrompt.ts  constants.ts  db.ts  digest.ts  filter.ts  gmail.ts  gmailLinks.ts  ingest.ts  kinConfig.ts  scope.ts  (+5 more)
(+294 files in other folders)
