[project]
name = "kin"
version = "0.1.0"
description = "Local-first AI for personal and family workflows."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "imap-tools>=1.6",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "icalendar>=5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv.workspace]
members = ["api", "ingest"]
