[project]
name = "kin"
version = "0.1.0"
description = "AI email triage. The runtime is the Next.js app in web/; this Python is the classifier eval guard."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["app*"]
