[project]
name = "kin-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.29",
    "kin",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.uv.sources]
kin = { workspace = true }
