[project]
name = "kin-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "google-auth-httplib2>=0.2",
    "kin",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.uv.sources]
kin = { workspace = true }
